# groundedql

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  MIGRATION.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
benchmark/: BENCHMARK_REPORT.md
benchmark/compare/: run_comparison.py  run_pipeline_only.py
config/: queryplan_spec.yaml  queryplan_spec_generated.yaml  schema.yaml
docs/: api-reference.md  concepts.md  contributing.md  exceptions.md  getting-started.md  index.md  llm-integration.md  query-plan-reference.md  schema-reference.md
docs/stylesheets/: extra.css
dsl_compiler/: __init__.py  agent.py  compiler.py  decompose.py  exceptions.py  executor.py  intent_memory.py  intent_normalize.py  intent_planner.py  join_planner.py  llm_client.py  llm_integration.py  plan_autofix.py  plan_canonical.py  planner.py  queryplan_models.py  schema_validator.py  semantic_lint.py  spec_builder.py  validation.py  value_index.py
dsl_compiler/api/: api.py  spec_api.py
groundedql/: __init__.py  agent.py  cli.py  compiler.py  evidence_planner.py  exceptions.py  executor.py  intent_memory.py  intent_normalize.py  llm_adapters.py  llm_integration.py  plan_autofix.py  planner.py  queryplan_models.py  read_sql_surface.py  schema_validator.py  spec_builder.py  value_index.py
groundedql/api/: api.py
intentql/: __init__.py  agent.py  cli.py  compiler.py  evidence_planner.py  exceptions.py  executor.py  guided_sql.py  intent.py  intent_memory.py  intent_normalize.py  intent_planner.py  join_planner.py  llm_adapters.py  llm_integration.py  plan_autofix.py  plan_canonical.py  queryplan_models.py  read_sql_surface.py  schema_api.py  schema_catalog.py  schema_validator.py  semantic_lint.py  spec_builder.py  sql_canonicalize.py  sql_guard.py  validation.py  value_index.py
intentql/api/: __init__.py  api.py
site/: 404.html  index.html  sitemap.xml
site/api-reference/: index.html
site/concepts/: index.html
site/contributing/: index.html
site/exceptions/: index.html
site/getting-started/: index.html
site/llm-integration/: index.html
site/query-plan-reference/: index.html
site/schema-reference/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
test/: test_compiler_fixes.py  test_generic_planner_resolution.py  test_main.py  test_read_sql_surface_and_schema_links.py  test_sql_guard.py
test/benchmark/: .gitignore  README.md  bird_minidev.py  generate_bird_schemas.py  summarize_bird_results.py  test_bird_minidev.py
test/benchmark/schemas/california_schools/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/card_games/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/codebase_community/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/debit_card_specializing/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/european_football_2/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/financial/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/formula_1/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/student_club/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/superhero/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/thrombosis_prediction/: queryplan_spec_generated.yaml  schema.yaml
test/benchmark/schemas/toxicology/: queryplan_spec_generated.yaml  schema.yaml
test/regression_test/: test_qs.json
