[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundedql"
description = "GroundedQL — Intent-driven, deterministic natural language to SQL for Postgres."
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Alexander Abakah" }
]
keywords = ["sql", "intent", "grounded", "postgres", "sqlalchemy", "llm", "analytics", "natural-language", "text-to-sql"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "pydantic>=2.0",
  "pyyaml",
]

[project.optional-dependencies]
memory = ["chromadb>=0.4"]
openai = ["openai>=1.0"]
google = ["google-generativeai>=0.5.0"]
benchmark = [
  "langchain-openai>=0.2",
  "langchain-google-genai>=2.0",
  "langchain-community>=0.3",
  "python-dotenv",
]
dev = ["ruff>=0.6.0", "build>=1.2.0", "twine>=5.0.0", "python-dotenv"]

[project.scripts]
groundedql = "groundedql.cli:main"

[project.urls]
Homepage = "https://github.com/Certifore/groundedql"
Documentation = "https://certifore.github.io/groundedql_docs"
Repository = "https://github.com/Certifore/groundedql"
Issues = "https://github.com/Certifore/groundedql/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["groundedql*"]
exclude = ["test*", "tests*"]

[tool.setuptools]
include-package-data = true
